--- a/dhcp6s.conf.5
+++ b/dhcp6s.conf.5
@@ -36,7 +36,7 @@
 .Nd DHCPv6 server configuration file
 .\"
 .Sh SYNOPSIS
-.Pa /usr/local/etc/dhcp6s.conf
+.Pa /etc/dhcp6s.conf
 .\"
 .Sh DESCRIPTION
 The
